--- a/angular.html
+++ b/angular.html
@@ -12,7 +12,7 @@
 <body ng-app="hi-angular">
     <div class="container-fluid" ng-controller="MainController">
         <div class="row">
-            <div class="col-md-8 offset-md-2">
+            <div class="offset-md-2">
                 <a href="https://github.com/ashleymmoore/Chill-Appz-Startup" target="_blank">Check out how the app was created by clicking here!</a>
             </div>
         </div>
