--- a/angular.html
+++ b/angular.html
@@ -17,6 +17,11 @@
             </div>
         </div>
         <div class="row">
+            <div class="offset-md-2">
+                <a href="https://github.com/CatalyticWeb/Chill-Appz-Startup/wiki#meet-the-team" target="_blank">Meet the team here</a>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-8 offset-md-2">
                 <h1 id="page-title">Welcome to ChillAppz</h1>
                 <p id="user-car"></p>
