--- a/angular.html
+++ b/angular.html
@@ -25,8 +25,8 @@
             <div class="col-md-8 offset-md-2">
                 <h1 id="page-title">Welcome to ChillAppz</h1>
                 <p id="user-car"></p>
-                <div style="width:1000px; margin:0 auto;">
-                    <h4>Choose type of container</h4>
+                <div style="margin:0 auto;">
+                    <h4>The only solution to get a perfectly chilled drink customized just for you!</h4>
                 </div>
 
         </div>
