--- a/angular.html
+++ b/angular.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-8""offest-md-2">
                 <h1 id="page-title">Welcome to ChillAppz</h1>
                 <p id="user-car"></p>
                 <div style="margin:20 auto;">
