--- a/angular.html
+++ b/angular.html
@@ -25,7 +25,7 @@
             <div class="col-md-8""offest-md-2">
                 <h1 id="page-title">Welcome to ChillAppz</h1>
                 <p id="user-car"></p>
-                <div style="margin:20 auto;">
+                <div style="width: 800px" "margin:20 auto;">
                     <h4>The only solution to get a perfectly chilled drink customized just for you!</h4>
                 </div>
 
