--- a/angular.html
+++ b/angular.html
@@ -23,6 +23,11 @@
                 <div style="width:800px; margin:10;">
                     <h4>Choose type of container</h4>
                 </div>
+                <form action="blahblah.php" method="post" >
+                    <button formaction="plastic.php">Plastic</button>
+                      <button formaction="glass.php">Glass</button>
+                      <button formaction="aluminum.php">Aluminum</button>
+                   </form>
 
         </div>
             </div>
