--- a/timer.html
+++ b/timer.html
@@ -57,7 +57,8 @@
 
     <script>
         // Set the date we're counting down to
-        var seconds = 90;
+        var seconds = 75;
+        
 
         //function to decrement timer
         function timer() {
@@ -69,9 +70,13 @@
             + */minutes + "m " + displaySeconds + "s ";
 
             if (seconds <= 0) {
+
+                var audio = new Audio('/audio');
+
                 //counter ended, do something here
                 window.clearInterval(interval);
                 document.getElementById("timer").innerHTML = "CHILLED!";
+                audio.play();
                 return;
             }
         }
