removed debug items from pages

--- a/timer.html
+++ b/timer.html
@@ -22,11 +22,13 @@
         <div class="row">
             <div class="col-md-8 offset-md-2">
                 <h1 id="page-title">timer-settings</h1>
+
+                <h3>Chilled Drink incoming!</h3>
                 <!--<input ng-model="chill.material">-->
-                <h3 id="material">Material: {{ chill.material }}</h3>
+                <!-- <h3 id="material">Material: {{ chill.material }}</h3>
                 <h3 id="quantity">Quantity: {{ chill.quantity }}</h3>
                 <h3 id="startTemp">Start Temperature: {{ chill.startTemp }}</h3>
-                <h3 id="endTemp">Ending Temperature: {{ chill.endTemp }}</h3>
+                <h3 id="endTemp">Ending Temperature: {{ chill.endTemp }}</h3> -->
             </div>
         </div>
     </div>
@@ -57,7 +59,7 @@
 
     <script>
         // Set the date we're counting down to
-        var seconds = 75;
+        var seconds = 90;
         
 
         //function to decrement timer
