--- a/angular.html
+++ b/angular.html
@@ -49,7 +49,7 @@
                 <h4>Choose Ending Temperature</h4>
                 </div>
                 <div>
-                    <button id="endCool">Coool</button>
+                    <button id="endCool">Cool</button>
                     <button id="endCold">Cold</button>
                     <button id="endFrost">Near Frozen</button>
                 </div>
