--- a/angular.html
+++ b/angular.html
@@ -49,16 +49,18 @@
                 <h4>Choose Ending Temperature</h4>
                 </div>
                 <div>
-                    <button id="endCool">Cool</button>
-                    <button id="endCold">Cold</button>
-                    <button id="endFrost">Near Frozen</button>
+                   <!-- <button id="endCool">Cool</button> -->
+                    <!-- <button id="endCold">Cold</button> -->
+                    <!--<button id="endFrost">Near Frozen</button>-->
                 </div>
                 <!--<form action="data.php" method="POST"> -->
                     <input type="hidden" id="material" name="material">
                     <input type="hidden" id="quantity" name="quantity">
-                    <input type="hidden" id="startTemp" name="startTemp">
+                    <input type="hidden" id="startTemp" name="star!tTemp">
                     <input type="hidden" id="endTemp" name="endTemp">
-                    <a href='/data'><button type="submit">Go!</button></a>
+                    <a href='/data'><button type="submit" >Cool</button></a>
+                    <a href='/data1'><button type="submit" >Cold</button></a>
+                    <a href='/data2'><button type="submit" >Near Frozen</button></a>
                 </form>
                 </div>
         </div>
