--- a/angular.html
+++ b/angular.html
@@ -9,7 +9,22 @@
     <script src="buttonActions.js"></script>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
+body, html {
+  height: 100%;
+}
 
+.bg {
+  /* The image used */
+  background-image: url("https://st2.depositphotos.com/4767347/8327/i/600/depositphotos_83277884-stock-photo-silver-fridge-door-with-handle.jpg");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 <body ng-app="hi-angular">
     <div class="container-fluid" ng-controller="MainController">
         <div class="row">
