--- a/angular.html
+++ b/angular.html
@@ -11,22 +11,8 @@
 </head>
 
 <body ng-app="hi-angular">
-    body, html {
-  height: 100%;
-}
+<div style="background-image: url("https://st2.depositphotos.com/4767347/8327/i/600/depositphotos_83277884-stock-photo-silver-fridge-door-with-handle.jpg");">
 
-.bg {
-  /* The image used */
-  background-image: url("https://st2.depositphotos.com/4767347/8327/i/600/depositphotos_83277884-stock-photo-silver-fridge-door-with-handle.jpg");
-
-  /* Full height */
-  height: 100%;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
     <div class="container-fluid" ng-controller="MainController">
         <div class="row">
             <div class="col-md-8 offset-md-2">
