--- a/angular.html
+++ b/angular.html
@@ -12,6 +12,7 @@
 
 <body ng-app="hi-angular">
 <div style="background-image: url("https://st2.depositphotos.com/4767347/8327/i/600/depositphotos_83277884-stock-photo-silver-fridge-door-with-handle.jpg");">
+    </div>
 
     <div class="container-fluid" ng-controller="MainController">
         <div class="row">
