--- a/angular.html
+++ b/angular.html
@@ -11,8 +11,12 @@
 </head>
 
 <body ng-app="hi-angular">
-<div style="background-image: url("https://st2.depositphotos.com/4767347/8327/i/600/depositphotos_83277884-stock-photo-silver-fridge-door-with-handle.jpg");">
-    </div>
+<style>
+    div{
+    background-image: url("https://st2.depositphotos.com/4767347/8327/i/600/depositphotos_83277884-stock-photo-silver-fridge-door-with-handle.jpg");">
+    }
+    </style>
+    
 
     <div class="container-fluid" ng-controller="MainController">
         <div class="row">
