--- a/angular.html
+++ b/angular.html
@@ -13,7 +13,9 @@
 <body ng-app="hi-angular">
 <style>
     div{
-    background-image: url("https://st2.depositphotos.com/4767347/8327/i/600/depositphotos_83277884-stock-photo-silver-fridge-door-with-handle.jpg");">
+    background-image: url("https://st2.depositphotos.com/4767347/8327/i/600/depositphotos_83277884-stock-photo-silver-fridge-door-with-handle.jpg");"
+        background-repeat: no-repeat;
+        background-size: cover;
     }
     </style>
     
