--- a/frozentimer.html
+++ b/frozentimer.html
@@ -14,6 +14,14 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 
+<style>
+    div{
+    background-image: url("https://img.freepik.com/free-photo/refrigerator-open-empty-fridge-inside-interior-close-up-empty-refrigerator-with-door-open-new-clean-refrigerator_38810-9416.jpg?size=626&ext=jpg");"
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    </style>
+
 <body ng-app="timer-settings">
     <div class="container-fluid" ng-controller="MainController">
         <div class="row justify-content-center row align-items-center">
