--- a/angular.html
+++ b/angular.html
@@ -98,6 +98,12 @@
             background-color: #e8e8e8;
         }
         
+        .bg {
+            background-image: url("https://st2.depositphotos.com/4767347/8327/i/600/depositphotos_83277884-stock-photo-silver-fridge-door-with-handle.jpg");"
+            background-repeat: no-repeat;
+            background-size: cover;    
+        }
+        
         .container {
             padding-top: 50px;
             padding-bottom: 50px;
