--- a/frozentimer.html
+++ b/frozentimer.html
@@ -103,6 +103,12 @@
             background-color: #e8e8e8;
         }
         
+        .bg {
+            background-image: url("https://img.freepik.com/free-photo/refrigerator-open-empty-fridge-inside-interior-close-up-empty-refrigerator-with-door-open-new-clean-refrigerator_38810-9416.jpg?size=626&ext=jpg");"
+            background-repeat: no-repeat;
+            background-size: cover;    
+        }
+        
         /* .container {
             padding-top: 50px;
             padding-bottom: 50px;
