--- a/coldtimer.html
+++ b/coldtimer.html
@@ -92,7 +92,9 @@
         html,
         body {
             min-height: 100vh;
-            background-color: #e8e8e8;
+            background-image: url("https://img.freepik.com/free-photo/refrigerator-open-empty-fridge-inside-interior-close-up-empty-refrigerator-with-door-open-new-clean-refrigerator_38810-9416.jpg?size=626&ext=jpg");"
+            background-repeat: no-repeat;
+            background-size: cover;
         }
         
         /* .container {
