--- a/frozentimer.html
+++ b/frozentimer.html
@@ -22,7 +22,7 @@
         </div>
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <h1 id="page-title">timer-settings</h1>
+                <h1 id="page-title">Cooling Countdown</h1>
 
                 <h3>Chilled Drink incoming!</h3>
                 <!--<input ng-model="chill.material">-->
